Filters changed to bold, spacing corrected, break points changed, padding changed for activities, margins corrected for mobile and tablet.

--- a/style.css
+++ b/style.css
@@ -205,11 +205,14 @@ header > img {
 .sliders > figcaption {
 	background-color: white;
 	padding-left: 10px;
+	padding-right: 3px;
+	font-weight: bold;
 }
+
 .sliders:hover {
 	flex-direction: row-reverse;
 	padding-left: 15px;
-	padding-right: 0px;	
+	padding-right: 0px;
 	border-right: none;
 	border-left: solid;
 	border-color: #f2f2f2;
@@ -260,6 +263,7 @@ figure > i {
 	align-content: stretch;
 	justify-content: space-around;
 	height: auto;
+	width: 100%;
 }
 
 #mainbody > section {
@@ -274,6 +278,7 @@ section#left {
 	height: auto;
 	border-radius: 25px;
 	justify-content: space-around;
+	width: 90%;
 }
 
 #left > .label {
@@ -297,24 +302,26 @@ div#Resultats > a {
 	width: 33%;
 	height: 250px;
 	margin-bottom: 25px;
+	padding: 0px;
 }
 
 
 figure.res {
 	display: flex;
 	flex-direction: column;
-	max-width: 100%;
 	height: auto;
 	flex-wrap: wrap;
 	padding: 3px;
 	box-shadow: 0px 4px 5px 0px #e8e7e6;
 	border-bottom-left-radius: 15px;
 	border-bottom-right-radius: 15px;
+	width: 90%;
+	margin: 0px;
 }
 
 figure.res > img {
-	max-width: 100%;
-	max-height: 150px;
+	width: 100%;
+	height: 150px;
 	overflow: hidden;
 	object-fit: cover;
 	border-top-right-radius: inherit;
@@ -493,12 +500,13 @@ img.att {
 }
 
 figcaption.att {
-	height: 55px;
 	width: 100%;
 	z-index: 1;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
-@media only screen and (max-width: 992px) and (min-width: 601px) {
+@media only screen and (max-width: 1280px) and (min-width: 720px) {
 	#filterbar {
 		flex-wrap: wrap;
 	}
@@ -509,6 +517,13 @@ figcaption.att {
 
 	#mainbody {
 		flex-direction: column-reverse;
+	}
+
+	#mainbody > section {
+		margin-top: 10px;
+		margin-left: 0px;
+		margin-right: 0px;
+		margin-bottom: 10px;
 	}
 
 	section#right {
@@ -533,7 +548,7 @@ figcaption.att {
 	}
 }
 
-@media only screen and (min-width: 1px) and (max-width: 601px) {
+@media only screen and (min-width: 1px) and (max-width: 720px) {
 
 	body {
 		margin: 0px;
@@ -655,6 +670,13 @@ figcaption.att {
 	#mainbody {
 		flex-direction: column-reverse;
 		background-color: white;
+	}
+
+	#mainbody > section {
+		margin-top: 10px;
+		margin-left: 0px;
+		margin-right: 0px;
+		margin-bottom: 10px;
 	}
 
 	#right {
